[package]
name = "promrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.19"
warp = "0.3"
thiserror = "1.0"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = { version = "0.1", features = ["log", "log-always"] }
tracing-subscriber = {version = "0.3.3", features = ["std", "env-filter"]}
tracing-opentelemetry = "0.28.0"
opentelemetry = "0.27"
opentelemetry-otlp = "0.27.0"
clap= { version = "4.5", features = ["derive"] }
opentelemetry_sdk = { version = "0.27.1", features = ["opentelemetry-http", "rt-tokio"] }
tonic = "0.12.3"
opentelemetry-appender-tracing = "0.27"
opentelemetry-stdout = "0.27.0"
